--- a/app/src/main/res/layout/activity_palabra.xml
+++ b/app/src/main/res/layout/activity_palabra.xml
@@ -12,11 +12,14 @@
         android:layout_width="136dp"
         android:layout_height="38dp"
         android:text="@string/english"
-        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="137dp"
-        tools:layout_editor_absoluteY="16dp" />
+        tools:layout_editor_absoluteY="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_marginTop="16dp"
+        />
 
-    <EditText
+<EditText
         android:id="@+id/etIngles"
         android:layout_width="280dp"
         android:layout_height="75dp"
@@ -24,25 +27,34 @@
         android:hint="@string/palabra_traducida"
         android:inputType="text"
         android:text=""
-        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="65dp"
-        tools:layout_editor_absoluteY="73dp" />
+        tools:layout_editor_absoluteY="73dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_marginTop="16dp"/>
 
     <ImageView
         android:id="@+id/ivImagen"
         android:layout_width="350dp"
         android:layout_height="155dp"
-        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="30dp"
         tools:layout_editor_absoluteY="183dp"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        tools:srcCompat="@tools:sample/backgrounds/scenic"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etIngles"
+        app:layout_marginTop="16dp"/>
 
     <Button
         android:id="@+id/btnVolver"
         android:layout_width="150dp"
         android:layout_height="75dp"
         android:text="@string/volver"
-        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="146dp"
-        tools:layout_editor_absoluteY="375dp" />
+        tools:layout_editor_absoluteY="375dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ivImagen"
+        app:layout_marginTop="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
