--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,34 +9,58 @@
 
     <TextView
         android:id="@+id/tvTitulo"
-        android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/palabra_esp"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_marginTop="16dp" />
+        android:layout_width="359dp"
+        android:layout_height="67dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="36dp"
+        android:text="@string/palabra_esp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
 
         android:id="@+id/etEsp"
         android:layout_width="0dp"
-    android:layout_height="67dp"
-    android:hint="@string/palabra"
-    android:ems="10"
-    android:inputType="text"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/tvTitulo"
-    app:layout_marginTop="16dp" />
+        android:layout_height="67dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginBottom="92dp"
+        android:ems="10"
+        android:hint="@string/palabra"
+        android:inputType="text"
+        app:layout_constraintBottom_toTopOf="@+id/btnTraducir"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
+         />
 
     <Button
         android:id="@+id/btnTraducir"
-        android:layout_width="150dp"
+        android:layout_width="409dp"
         android:layout_height="75dp"
+        android:layout_marginTop="92dp"
+        android:layout_marginBottom="286dp"
         android:text="@string/traducir"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/etEsp"
-    app:layout_marginTop="16dp" />
+        app:layout_constraintTop_toBottomOf="@id/etEsp" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="left" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="686dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
